web-nodejs/xebialabs/package/service-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-ui
    application: coolstore
    component: web-ui
  name: web-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: web-ui
