web-nodejs/xebialabs/package/route-web-ui.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    application: coolstore
    component: web-ui
  name: web-ui
spec:
  to:
    kind: Service
    name: web-ui
